Implement comparison of static compression algorithms